# ChangeLog for net-libs/wvstreams
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/wvstreams/ChangeLog,v 1.151 2013/03/05 13:34:34 flameeyes Exp $

*wvstreams-4.6.1-r3 (05 Mar 2013)

  05 Mar 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +wvstreams-4.6.1-r3.ebuild, -wvstreams-4.6.1-r1.ebuild, metadata.xml,
  wvstreams-4.6.1-r2.ebuild:
  Introduce a new version that handles boost dependency properly; replace
  dependency on virtual with its own dependency (and as a build-time dependency
  only). Move maintainership to net-dialup since this is only used by net-
  dialup/wvdial.

  08 Aug 2012; Brent Baude <ranger@gentoo.org> wvstreams-4.6.1-r2.ebuild:
  Marking wvstreams-4.6.1-r2 ppc for bug 421983

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> wvstreams-4.6.1-r2.ebuild:
  alpha/sparc stable wrt #421983

  03 Jul 2012; Jeroen Roovers <jer@gentoo.org> wvstreams-4.6.1-r2.ebuild:
  Stable for HPPA (bug #421983).

  21 Jun 2012; Jeff Horelick <jdhore@gentoo.org> wvstreams-4.6.1-r2.ebuild:
  marked x86 per bug 421983

  20 Jun 2012; Agostino Sarubbo <ago@gentoo.org> wvstreams-4.6.1-r2.ebuild:
  Stable for amd64, wrt bug #421983

  16 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  wvstreams-4.6.1-r2.ebuild:
  Pass -fno-tree-dce -fno-optimize-sibling-calls to prevent crashing when built
  with sys-devel/gcc >= 4.7 wrt #419971

  06 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  wvstreams-4.6.1-r1.ebuild:
  inherit eutils for epatch

*wvstreams-4.6.1-r2 (06 Jun 2012)

  06 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  +wvstreams-4.6.1-r2.ebuild, +files/wvstreams-4.6.1-gcc47.patch:
  Pass --localstatedir=/var to correct uniconfd.ini location. Use
  -fno-strict-aliasing since this package is not ready for aliasing. Fix
  compability with sys-devel/gcc >= 4.7 wrt #419563 and #419971 by Ioannis
  Galanomatis.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> wvstreams-4.6.1-r1.ebuild: