@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/wvstreams
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/wvstreams/ChangeLog,v 1.151 2013/03/05 13:34:34 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/wvstreams/ChangeLog,v 1.152 2013/05/08 20:29:39 jer Exp $
+
+  08 May 2013; Jeroen Roovers <jer@gentoo.org> wvstreams-4.6.1-r2.ebuild,
+  wvstreams-4.6.1-r3.ebuild:
+  Fix building with automake-1.13 by ablepharus (bug #469106).
 
 *wvstreams-4.6.1-r3 (05 Mar 2013)
 
